[package]
name = "movies-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = "0.11.11"
serde = {version="1.0.140", features=["derive"]}
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
